# kengine

./: .gitignore  CMakeLists.txt  Makefile  kengine.sln  kengine.vcxproj  main.cpp  test
engine/include/glad/: glad.h
engine/include/kengine/: macros.hpp  singleton.hpp  types.hpp
engine/include/kengine/core/: event.hpp  exception.hpp  kengine.hpp  logging.hpp  transform.hpp  uuid.hpp  window.hpp
engine/include/kengine/core/assets/: asset.hpp  image.hpp  manager.hpp  text.hpp
engine/include/kengine/core/fileio/: file.hpp
engine/include/kengine/core/graphics/: mesh.hpp  renderer.hpp  shader.hpp
engine/include/kengine/core/platform/: memory.hpp  platform.hpp
engine/include/kengine/core/window/: window.hpp
engine/include/kengine/util/math/: sqrt.hpp  vector.hpp
engine/src/core/: kengine.cpp  logging.cpp  window.cpp
engine/src/core/graphics/: renderer.cpp
engine/src/core/graphics/dx10/: renderer_dx10.cpp  renderer_dx10.hpp
engine/src/core/graphics/gl41/: renderer_gl41.cpp  renderer_gl41.hpp
engine/src/core/platform/: memory.cpp  platform.cpp
engine/src/core/platform/linux/: platform_linux.cpp  platform_linux.hpp
engine/src/core/platform/win/: platform_win.cpp  platform_win.hpp
engine/src/core/window/: window.cpp
engine/src/core/window/win/: window_win.cpp  window_win.hpp
engine/src/core/window/xlib/: window_xlib.cpp  window_xlib.hpp
engine/src/util/math/: sqrt.hpp
game/src/: main.cpp
kengine/include/kengine/: camera.hpp  kengine.hpp  logger.hpp  types.hpp  window.hpp
kengine/include/kengine/graphics/: d3d10.hpp  material.hpp  mesh.hpp  opengl.hpp  postprocess.hpp  renderable.hpp  renderer.hpp  shader.hpp
kengine/include/kengine/input/: gamepad.hpp  input.hpp  key.hpp
kengine/include/kengine/math/: matrix.hpp  vector.hpp
kengine/include/kengine/module/: module.hpp
kengine/include/kengine/util/: matrix.hpp  time.hpp  vector.hpp
kengine/src/: camera.cpp  kengine.cpp  logger.cpp  window.cpp  window_mac.cpp  window_win32.cpp
kengine/src/graphics/: d3d10.cpp  opengl.cpp  renderer.cpp
kengine/src/input/: input.cpp  input_mac.cpp  input_win32.cpp
kengine/src/module/: module_win32.cpp  synthesized_module.cpp
kengine/src/util/: time.cpp  vector.cpp
test/: Makefile  kengine-test  main.cpp
